apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus-service
  namespace: monitoring
spec:
  selector:
    app: gatus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
