apps/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-auth@kuberdns
spec:
  tls:
    - hosts:
        - status.kelbaz.dev
      secretName: status-kelbaz-tls
  rules:
    - host: status.kelbaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus-service
                port:
                  number: 80
